Changes card font, fixes gap issue inside card

--- a/src/components/home/styles/skill-card.module.scss
+++ b/src/components/home/styles/skill-card.module.scss
@@ -1,12 +1,6 @@
 .cardContainer {
-
-	display:flex;
-	flex-direction:column;
-	align-items:center;
-	justify-content:space-between;
 	margin:1em;
-	list-style-type:none;
-	background:white;
+	background:var(--purple);
 	border:4px solid var(--purple);
 	max-width:170px;
 	max-height:200px;
@@ -16,6 +10,7 @@
 	transform:translate(0, 100px);
 	opacity:0;
 	will-change: transform;
+	overflow:hidden;
 
 	&:hover {
 		box-shadow:20px 20px 0 0 var(--purpleBoxShadow);
@@ -28,29 +23,19 @@
 }
 
 .imgContainer {
-	padding:2em;
+
+	background:white;
+	padding:1em;
 
 	img {
-		object-fit: contain;
-		width:90px;
-		height:auto;
-	}
-
-	@media screen and (max-width:650px) {
-		padding:1em;
-		img {
-			width:80px;
-			height:auto;
-		}
+		object-fit:contain;
 	}
 
 }
 
 .skillName {
-	padding:0.3em 0;
-	width:100%;
-	font-family:upgrade-lights;
-	background:var(--purple);
+	padding:0.5em 0;
+	font-family:var(--roboto);
 	color:white;
 	font-weight:300;
 	text-align:center;
